fix horizontal scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,11 @@
   } */
 }
 
-body {
+body,html {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica,sans-serif;
+  width: 100%;
+  height: 100%;
+  
 }
